force-app/main/default/objects/Metrica__c/Metrica__c.object-meta.xml
<CustomObject>
    <label>Metrica</label>
    <nameField>
        <label>Metrica Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metricas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>