force-app/main/default/objects/Metrica__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripcion</label>
    <type>TextArea</type>
</CustomField>