force-app/main/default/objects/Metrica__c/fields/Operacion__c.field-meta.xml
<CustomField>
    <fullName>Operacion__c</fullName>
    <label>Operacion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suma</fullName>
            </value>
            <value>
                <fullName>Cuenta</fullName>
            </value>
            <value>
                <fullName>Minimo</fullName>
            </value>
            <value>
                <fullName>Maximo</fullName>
            </value>
            <value>
                <fullName>Promedio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>